# code-usages

./: README.md  electron-builder.config.js  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
legacy-electron/: package-lock.json  package.json
legacy-electron/assets/: icon.icns
legacy-electron/src/: config.js  settings.js  usage.js
legacy-electron/src/popover/: index.html  popover.css  popover.js
legacy-electron/src/renderer/: ring.html
packaging/homebrew/: claude-usage-bar.rb  code-usages.rb
src/: inject-preload.js  inject-session.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_code.rs  lib.rs  main.rs  ring.rs  settings.rs  usage.rs
src/popover/: index.html  popover-preload.js
ui/: index.html  popover.css  popover.js
